k8s/00-namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: library
